implemented get doctors authenticated api
